--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "puppeteer": "^19.4.1",
+    "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-anonymize-ua": "^2.4.4",
+    "puppeteer-extra-plugin-stealth": "^2.11.1",
+    "puppeteer-har": "^1.1.2"
   }
 }
