--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "puppeteer": "^19.4.1",
+    "puppeteer-autoscroll-down": "^1.1.1",
     "puppeteer-extra": "^3.3.4",
     "puppeteer-extra-plugin-anonymize-ua": "^2.4.4",
     "puppeteer-extra-plugin-stealth": "^2.11.1",
