--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "puppeteer": "^19.5.2",
     "puppeteer-autoscroll-down": "^1.1.1",
