--- a/views/package.json
+++ b/views/package.json
@@ -14,6 +14,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "vite": "^4.0.0"
+    "sass": "^1.57.1",
+    "vite": "^4.0.0",
+    "vite-plugin-browser-sync": "^1.0.2",
+    "vue-router": "^4.1.6"
   }
 }
