--- a/views/package.json
+++ b/views/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "axios": "^1.2.5",
+    "pinia": "^2.0.29",
+    "vue": "^3.2.45",
+    "vue-meta": "^2.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
