--- a/views/package.json
+++ b/views/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.2.5",
     "pinia": "^2.0.29",
     "vue": "^3.2.45",
-    "vue-meta": "^2.4.0"
+    "vue-meta": "^3.0.0-alpha.10"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
