--- a/views/package.json
+++ b/views/package.json
@@ -17,6 +17,7 @@
     "quasar": "^2.11.5",
     "roboto-fontface": "*",
     "vue": "^3.2.45",
+    "vue-i18n": "^9.2.2",
     "vue-meta": "^3.0.0-alpha.10"
   },
   "devDependencies": {
