--- a/package.json
+++ b/package.json
@@ -22,13 +22,21 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "mariadb": "^3.0.2",
+    "passport-local": "^1.0.0",
     "puppeteer": "^19.5.2",
     "puppeteer-autoscroll-down": "^1.1.1",
     "puppeteer-extra": "^3.3.4",
     "puppeteer-extra-plugin-anonymize-ua": "^2.4.4",
     "puppeteer-extra-plugin-stealth": "^2.11.1",
-    "puppeteer-har": "^1.1.2"
+    "puppeteer-har": "^1.1.2",
+    "sequelize": "^6.28.0"
   }
 }
