--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-session": "^1.17.3",
     "mariadb": "^3.0.2",
+    "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "puppeteer": "^19.5.2",
     "puppeteer-autoscroll-down": "^1.1.1",
