SIgn In SIgn out store in localstorage

--- a/views/package.json
+++ b/views/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "@quasar/extras": "^1.15.10",
+    "@vueuse/core": "^9.12.0",
     "pinia": "^2.0.29",
     "quasar": "^2.11.5",
     "roboto-fontface": "*",
