--- a/views/package.json
+++ b/views/package.json
@@ -13,6 +13,7 @@
     "@mdi/font": "5.9.55",
     "@quasar/extras": "^1.15.10",
     "@vueuse/core": "^9.12.0",
+    "dayjs": "^1.11.7",
     "pinia": "^2.0.29",
     "quasar": "^2.11.5",
     "roboto-fontface": "*",
